{
    "name": "InputActionsSheme",
    "maps": [
        {
            "name": "Input",
            "id": "fdde530e-b972-49b9-83b5-a918106ee15e",
            "actions": [
                {
                    "name": "HandlePressedMove",
                    "type": "Value",
                    "id": "9a464921-041a-40bd-84e8-04316e79395b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HandleMove",
                    "type": "Value",
                    "id": "7945845f-6bc8-4dc2-9377-fad9ec129c5d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Press",
                    "type": "Value",
                    "id": "f0b0b76c-cde2-499f-8de8-1a59a27838df",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "One Modifier",
                    "id": "f78891ff-2cd0-42c4-a1b8-aa0b8fca32eb",
                    "path": "OneModifier",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HandlePressedMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "4c9f7686-c714-4cc0-8361-ae7b2e50d926",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandlePressedMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "b7e3a017-08a5-43ad-a566-39a197db1db4",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandlePressedMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5138a63f-e945-40c7-8290-f3d252e660cf",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandleMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "08245fd8-d89d-4d88-b20f-1190ea8bb3a9",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "9cbf0a8f-3e06-41ba-98b3-a0df25f0af76",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "ce8b8914-5eb4-4483-86c9-c6e287ad08fc",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}